# ruvents-test

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
test_task/logic/: task_logic.py
test_task/scripts/: my_task.py
tests/: test_ruvents_test_task.py
